--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,12 @@
 
 body,
 html,
-#root {
+#root {  
   margin: 0;
   width: 100%;
   height: 100%;
-  font-family: 'helvetica', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: helvetica, sans-serif;  
+  -webkit-font-smoothing: antialiased;  
+  font-weight: 600;
   scroll-behavior: smooth;
 }
