--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,39 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'noto-sans';
+  src: ('/assets/fonts/NotoSansKR-VariableFont_wght.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body,
 html,
-#root {  
+#root {
   margin: 0;
   width: 100%;
   height: 100%;
-  font-family: helvetica, sans-serif;  
-  -webkit-font-smoothing: antialiased;  
+  font-family: "helvetica", "noto-sans";
+  -webkit-font-smoothing: antialiased;
   font-weight: 600;
   scroll-behavior: smooth;
+}
+
+code {
+  border-radius: 3px;
+  padding: 3px;
+  background: #EDEDED;
+  color: #DD7A75;
+}
+
+strong {
+  font-weight: 800;
+  color: black;
+}
+
+a {
+  font-weight: 650;
+  color: #1A0DAB;
+  text-decoration: none;
 }
